adjusted several spacing issues on the homepage

--- a/src/AboutAfrosoul.css
+++ b/src/AboutAfrosoul.css
@@ -3,7 +3,7 @@
     color: #fff;
     padding: 40px 20px;
     max-width: 800px;
-    margin: 74px auto;
+    margin: 50px auto;
     font-size: 1.2rem;
     line-height: 1.8;
     border-radius: 12px;
