--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -22,7 +22,7 @@
     cursor: pointer;
     border-radius: 10px;
     opacity: 0.6;
-    margin-bottom: 135PX;
+
   }
   
   .image-container.active {
